# ai_hr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  ruff.toml
alembic/: Makefile  env.py
alembic/versions/: 2025-09-07T16-19_d3ac1c9c6710_init.py  2025-09-09T18-13_1a97329c62fb_unused_fields.py  2025-09-09T19-02_5937d025cb9f_questions.py  2025-09-09T19-14_e4c171ce624c_alias.py  2025-09-09T20-09_1bb47e061820_questions_and_alias.py  2025-09-09T22-00_25f7bd94b45f_chats.py
app/: Dockerfile  README.md  api.py  bot.py  config.py  dependencies.py  enums.py  exceptions.py  llm.py  main.py  models.py  parsing.py  pyproject.toml
app/bot/: analize.py  handlers.py  start_bot.py
app/conclusion/routers/: conclusion.py  routers.py
app/cv_analysis/: analyzer.py  utils.py
app/cv_analysis/routers/: cv.py  routers.py
app/database/: core.py  schema.py
app/database/query/: __init__.py  candidate.py  interview.py  questions.py
app/dialog_analysis/: analyzer.py
app/dialog_analysis/routers/: llm.py  routers.py
app/presentation/: api.py  models.py
cv_ai/: README.md  a (2).md  answers_analize.py  config.py  cv_ai_client.py  cv_analyze.py  main.py  model_init.py  pyproject.toml  questions_gen.py  shrink.py  test.py  резюме.txt
cv_ai/config/: models_config.yaml
cv_ai/src/: analyzer.py  answers_analize.py  api.py  config.py  configBAD.py  cv_analyze.py  main_pipeline.py  main_pipelineBAD.py  model_init.py  ner.py  ner2.py  ner2bad.py  pyproject.toml  questions_gen.py  test.py
cv_ai/src/dataset/: вакансия.txt  резюме.txt
cv_ai/src/models/: ner_model.py
cv_ai/src/pipelines/: main_pipeline.py
cv_ai/src/processing/: postprocessing.py  preprocessing.py
cv_ai/src/routers/: api.py  models.py
cv_ai/src/train/: cli.py  config.py  load_data.py  ner_dataset.py  pyproject.toml  train_ner.py
cv_ai/train/: load_data.py  train_ner.py
llm/: Dockerfile  llm_client.py
