[tool.poetry]
name = "cv_ai"
version = "0.1.0"
description = "CV parsing with AI"
authors = [
    "breakcore-chan <sergejglebov25@gmail.com>",
    "soejnekdodks <brmstr4me@gmail.com>", 
    "Anthony Simonov <asimonov05@gmail.com>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
# Web Framework
fastapi = "0.116.1"
uvicorn = {extras = ["standard"], version = "0.35.0"}

# ML & NLP
transformers = "4.56.0"
datasets = "4.0.0"

# Data Processing
scikit-learn = "1.5.0"

# NER Specific
seqeval = "1.2.2"

# Utilities
loguru = "0.7.3"
pydantic = "2.10.0"
pydantic-settings = "2.10.1"
python-dotenv = "1.1.1"
tqdm = "4.67.0"

# File Processing
python-multipart = "0.0.7"
torch = "^2.8.0"
sentence-transformers = "^5.1.0"
accelerate = "^1.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.9"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

