[tool.poetry]
name = "cv_ai"
version = "0.1.0"
description = "CV parsing with AI"
authors = [
    "breakcore-chan <sergejglebov25@gmail.com>",
    "soejnekdodks <brmstr4me@gmail.com>", 
    "Anthony Simonov <asimonov05@gmail.com>"
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
# Рекомендую использовать стабильный Python
python = ">=3.10,<3.14"

# Web Framework
fastapi = "0.116.1"
uvicorn = { extras = ["standard"], version = "0.35.0" }

# ML & NLP
transformers = "4.56.0"
datasets = "4.0.0"
torch = "^2.8.0"
accelerate = "^1.10.1"
sentence-transformers = "^5.1.0"

# Utilities
loguru = "0.7.3"
pydantic = "2.10.0"
pydantic-settings = "2.10.1"
python-dotenv = "1.1.1"
tqdm = "4.67.0"
httpx = "^0.28.1"

# DB & Async
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
aiogram = "^3.22.0"

# File Processing
python-multipart = "0.0.7"
pymupdf = "^1.26.4"
striprtf = "^0.0.29"
python-docx = "^1.2.0"

# Optional GPU Support
bitsandbytes = { version = "^0.43.0", optional = true }

[tool.poetry.extras]
gpu = ["bitsandbytes"]

[tool.poetry.group.dev.dependencies]
ruff = "0.12.9"
pyright = "^1.1.405"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"