[project]
name = "cv_ai"
version = "0.1.0"
description = "cv_ai"
authors = [
    {name = "breakcore-chan",email = "sergejglebov25@gmail.com"},
    {name = "soejnekdodks",email = "brmstr4me@gmail.com"},
    {name = "Anthony Simonov", email = "asimonov05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "ijson (>=3.4.0,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
pyright = "^1.1.403"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
