[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "soejnekdodks",email = "brmstr4me@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "peft (>=0.17.1,<0.18.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
