[project]
name = "train"
version = "0.1.0"
description = ""
authors = [
    {name = "soejnekdodks",email = "brmstr4me@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "seqeval (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
